--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Pictmanager</title>
+  <title>ミニダム1日1絵</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
